# ecotrack-backend

./: compose.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/endpoints/: __init__.py
app/endpoints/v1/: airquality.py  map_leafet.py  map_matplotlib.py  waterquality.py
app/entities/: __init__.py  airquality.py  base.py  waterquality.py
app/repo/: session.py
app/schemas/: airquality.py  base.py  waterquality.py
app/services/: airquality.py  waterquality.py
migrations/: env.py
migrations/versions/: 3b34d326c57e_init.py  c78afae7734e_init.py
static/: index.html  index0.html  index_with_alert.html  index_without_alert.html
